--- a/user/index.html
+++ b/user/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id='app'></div>
 
-    <script src="./js/main.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
