chưa làm nút tăng giam san pham

--- a/admin/index.html
+++ b/admin/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Capstone-JS</title>
+  <title>ShoppingCart - Admin
+  </title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
@@ -147,8 +148,12 @@
               <input id="BackCamera" class="form-control" placeholder="MP" />
             </div>
             <div class="form-group">
-              <label>Hình Ảnh</label>
-              <input id="HinhSP" class="form-control" placeholder="Nhập vào hình sản phẩm" />
+              <label>Hình Ảnh JPG</label>
+              <input id="jpg" class="form-control" placeholder="Nhập vào hình sản phẩm .jpg" />
+            </div>
+            <div class="form-group">
+              <label>Hình Ảnh PNG</label>
+              <input id="png" class="form-control" placeholder="Nhập vào hình sản phẩm .png" />
             </div>
             <div class="form-group">
               <label>Desc</label>
@@ -193,11 +198,8 @@
   <script src="https://code.highcharts.com/modules/exporting.js"></script>
 
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="./services/SanPhamService.js"></script>
-  <script src="./models/SanPham.js"></script>
-
-  <script src="./models/SanPham.js"></script>
   <script src="./services/sanPhamAPI.js"></script>
+  <script src="./models/SanPham.js"></script>
   <script src="./controllers/main.js"></script>
 </body>
 
