thanh toán gio hang

--- a/store/index.html
+++ b/store/index.html
@@ -37,7 +37,7 @@
                             <div class="final">
                                 <strong>Total: $ <span class="total">0</span></strong>
                                 <div class="action">
-                                    <button onclick="buy(1)" class="btn buy">Purchase
+                                    <button class="btn buy">Purchase
                                         <i class="fas fa-credit-card" style="color:#6665dd;"></i>
                                     </button>
                                     <button class="btn clear">
@@ -48,11 +48,25 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="stock-limit">
-                        <em>You Can Only Buy 10 Items For Each Product</em>
-                        <button class="btn-ok" onclick="limitPurchase(this)">Okay</button>
+                    <div class="order-now">
+                        <div class="invoice">
+                          <div class="shipping-items">
+                            <div class="item-names"><span>1 x Macbook Pro</span></div>
+                            <div class="items-price"><span>$ 2000</span></div>
+                          </div>
+                        <hr>
+                          <div class="payment">
+                            <em>payment</em>
+                            <div>
+                              <p>total amount to be paid:</p><span class="pay">$ 2000</span>
+                            </div>
+                          </div>
+                          <div class="order">
+                            <button class="btn-order btn">Order Now</button>
+                            <button class="btn-cancel btn">Cancel</button>
+                          </div>
+                        </div>
                     </div>
-                    <div class="order-now"></div> -->
                 </div>
             </div>
         </div>
