--- a/store/index.html
+++ b/store/index.html
@@ -51,14 +51,14 @@
                     <div class="order-now">
                         <div class="invoice">
                           <div class="shipping-items">
-                            <div class="item-names"><span>1 x Macbook Pro</span></div>
-                            <div class="items-price"><span>$ 2000</span></div>
+                            <div class="item-names"><span></span></div>
+                            <div class="items-price"><span></span></div>
                           </div>
                         <hr>
                           <div class="payment">
                             <em>payment</em>
                             <div>
-                              <p>total amount to be paid:</p><span class="pay">$ 2000</span>
+                              <p>total amount to be paid:</p><span class="pay"></span>
                             </div>
                           </div>
                           <div class="order">
