--- a/store/index.html
+++ b/store/index.html
@@ -50,21 +50,25 @@
                     </div>
                     <div class="order-now">
                         <div class="invoice">
-                          <div class="shipping-items">
-                            <div class="item-names"><span></span></div>
-                            <div class="items-price"><span></span></div>
-                          </div>
-                        <hr>
-                          <div class="payment">
-                            <em>payment</em>
-                            <div>
-                              <p>total amount to be paid:</p><span class="pay"></span>
+                            <div class="shipping-items">
+                                <div class="item-names"><span></span></div>
+                                <div class="items-price"><span></span></div>
                             </div>
-                          </div>
-                          <div class="order">
-                            <button class="btn-order btn">Order Now</button>
-                            <button class="btn-cancel btn">Cancel</button>
-                          </div>
+                            <hr>
+                            <div class="payment">
+                                <em>payment</em>
+                                <div>
+                                    <p>total amount to be paid:</p><span class="pay"></span>
+                                </div>
+                            </div>
+                            <div class="order">
+                                <button class="btn-order btn">Order Now</button>
+                                <button class="btn-cancel btn">Cancel</button>
+                            </div>
+                            <div class="done" style ="display: none;">
+                                <em class="thanks">Thanks for shopping with us</em>
+                                <button class="btn-continue">continue</button>
+                            </div>
                         </div>
                     </div>
                 </div>
